{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 26,
  "lineage": "7e683e58-90f6-fe66-e430-a387cc1ceed5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176835084998:internet-gateway/igw-0b34924049df766b9",
            "id": "igw-0b34924049df766b9",
            "owner_id": "176835084998",
            "tags": {
              "Name": "VPC IGW"
            },
            "tags_all": {
              "Name": "VPC IGW"
            },
            "vpc_id": "vpc-06bead39c71a06292"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:176835084998:loadbalancer/app/ankit-lb-prod/187c8304a1dc2971",
            "arn_suffix": "app/ankit-lb-prod/187c8304a1dc2971",
            "dns_name": "ankit-lb-prod-753200728.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:176835084998:loadbalancer/app/ankit-lb-prod/187c8304a1dc2971",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ankit-lb-prod",
            "security_groups": [
              "sg-03dab461417713cc7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0430474cb2434b27e"
              },
              {
                "subnet_id": "subnet-0678a0e84ce87c8d2"
              }
            ],
            "subnets": [
              "subnet-0430474cb2434b27e",
              "subnet-0678a0e84ce87c8d2"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-06bead39c71a06292",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.alb_web_sg",
            "aws_subnet.subnet_public-A",
            "aws_subnet.subnet_public-B",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176835084998:route-table/rtb-08a982dceeef953e3",
            "id": "rtb-08a982dceeef953e3",
            "owner_id": "176835084998",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Subnet RT"
            },
            "tags_all": {
              "Name": "Private Subnet RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bead39c71a06292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176835084998:route-table/rtb-0f5711c736a472b3f",
            "id": "rtb-0f5711c736a472b3f",
            "owner_id": "176835084998",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b34924049df766b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "tags_all": {
              "Name": "Public Subnet RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bead39c71a06292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0182911d4f8c055a8",
            "route_table_id": "rtb-08a982dceeef953e3",
            "subnet_id": "subnet-09675bb0bc2f0e9f4"
          },
          "dependencies": [
            "aws_route_table.web-private-rt",
            "aws_subnet.subnet_private-B",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d2e444dada37e97",
            "route_table_id": "rtb-0f5711c736a472b3f",
            "subnet_id": "subnet-0430474cb2434b27e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.subnet_public-B",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efeb554b81060416",
            "route_table_id": "rtb-08a982dceeef953e3",
            "subnet_id": "subnet-0ca583f4c57513a43"
          },
          "dependencies": [
            "aws_route_table.web-private-rt",
            "aws_subnet.subnet_private-A",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076aed53ee989dce5",
            "route_table_id": "rtb-0f5711c736a472b3f",
            "subnet_id": "subnet-0678a0e84ce87c8d2"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.subnet_public-A",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176835084998:security-group/sg-03dab461417713cc7",
            "description": "Traffic Rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dab461417713cc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ankit-prod_alb_sg",
            "name_prefix": "",
            "owner_id": "176835084998",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ankit-prod_sg_group"
            },
            "tags_all": {
              "Name": "ankit-prod_sg_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bead39c71a06292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176835084998:security-group/sg-0aec8d46ebfb5c873",
            "description": "Traffic Rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aec8d46ebfb5c873",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "180.151.15.236/32",
                  "180.151.78.218/32",
                  "180.151.78.220/32",
                  "180.151.78.222/32",
                  "111.93.242.34/32",
                  "182.74.4.226/32",
                  "35.169.106.126/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ankit-prod_asg_web_sg",
            "name_prefix": "",
            "owner_id": "176835084998",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ankit-prod_sg_group"
            },
            "tags_all": {
              "Name": "ankit-prod_sg_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bead39c71a06292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176835084998:security-group/sg-0db950cddb9a9349a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db950cddb9a9349a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03dab461417713cc7"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20211109185536217600000001",
            "name_prefix": "terraform-",
            "owner_id": "176835084998",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ankit-prod_rds_sg"
            },
            "tags_all": {
              "Name": "ankit-prod_rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bead39c71a06292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_web_sg",
            "aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176835084998:subnet/subnet-0ca583f4c57513a43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0ca583f4c57513a43",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176835084998",
            "tags": {
              "Name": "Private-A"
            },
            "tags_all": {
              "Name": "Private-A"
            },
            "vpc_id": "vpc-06bead39c71a06292"
          },
          "dependencies": [
            "aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176835084998:subnet/subnet-09675bb0bc2f0e9f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-09675bb0bc2f0e9f4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176835084998",
            "tags": {
              "Name": "Private-B"
            },
            "tags_all": {
              "Name": "Private-B"
            },
            "vpc_id": "vpc-06bead39c71a06292"
          },
          "dependencies": [
            "aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176835084998:subnet/subnet-0678a0e84ce87c8d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0678a0e84ce87c8d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176835084998",
            "tags": {
              "Name": "Public-subnet-A"
            },
            "tags_all": {
              "Name": "Public-subnet-A"
            },
            "vpc_id": "vpc-06bead39c71a06292"
          },
          "dependencies": [
            "aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176835084998:subnet/subnet-0430474cb2434b27e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0430474cb2434b27e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "176835084998",
            "tags": {
              "Name": "Public-subnet-B"
            },
            "tags_all": {
              "Name": "Public-subnet-B"
            },
            "vpc_id": "vpc-06bead39c71a06292"
          },
          "dependencies": [
            "aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:176835084998:vpc/vpc-06bead39c71a06292",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03afe113622912700",
            "default_route_table_id": "rtb-014a83e625f40d438",
            "default_security_group_id": "sg-07bab834eb99fa17e",
            "dhcp_options_id": "dopt-0434f87876e1862b9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06bead39c71a06292",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-014a83e625f40d438",
            "owner_id": "176835084998",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}